<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bar"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/drawable_back_button" />

        <TextView
            android:id="@+id/mainTitle"
            style="@style/MainTitle_Montserrat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/communication"
            android:textAllCaps="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/llContent"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="#f6f7fd">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Grey_12"
                android:text="@string/data"/>
            <LinearLayout
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="@drawable/drawable_item_comm">
                <RelativeLayout
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/drawable_button_light">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:tint="#1967ab"
                        android:src="@drawable/ic_cloud_upload_24"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="16dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/send_data"
                        style="@style/Montserrat_Bold"
                        android:textSize="14sp"
                        android:textColor="#232f3b"
                        android:layout_centerVertical="true"/>
                    <TextView
                        android:id="@+id/tvSendCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        style="@style/Label_Montserrat_12"
                        android:textColor="#fe5461"
                        android:textSize="13sp"
                        tools:text="22 records are ready to send"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnReceive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:background="@drawable/drawable_item_comm">
                <RelativeLayout
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/drawable_button_light">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:tint="#1967ab"
                        android:src="@drawable/ic_cloud_download_24"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/receive_data"
                        style="@style/Montserrat_Bold"
                        android:textSize="14sp"
                        android:textColor="#232f3b"
                        android:layout_centerVertical="true"/>
                    <TextView
                        android:id="@+id/tvLastSync"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Label_Montserrat_12"
                        android:textSize="13sp"
                        tools:text="Last sync. was 1 hours ago"/>
                </LinearLayout>

                <!--<TextView
                    android:id="@+id/tvOrderCount"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/drawable_red_box"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginRight="16dp"
                    android:singleLine="true"
                    android:text="4"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />-->
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Grey_12"
                android:layout_marginTop="32dp"
                android:text="@string/device_setting"/>
            <LinearLayout
                android:id="@+id/btnRenewIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center_vertical"
                android:background="@drawable/drawable_item_comm">
                <RelativeLayout
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:backgroundTint="#e4f9f5"
                    android:background="@drawable/drawable_button_light">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:tint="#20cbaf"
                        android:src="@drawable/ic_share_24"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/renew_device_id"
                    style="@style/Montserrat_Bold"
                    android:textSize="14sp"
                    android:textColor="#232f3b"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"/>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_next_arrow"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>