<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".view.CommunicationActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bar"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <!--<Button
            android:id="@+id/btnBackComm"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/drawable_back_button" />-->
        <TextView
            android:id="@+id/mainTitle"
            style="@style/MainTitle_Montserrat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/communication"
            android:textAllCaps="true" />
        <Button
            android:id="@+id/btnSyncComm"
            android:layout_width="48dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/drawable_retry_button_comm" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/header">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/imgConnect"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:src="@mipmap/ic_loading"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connecting"
                    style="@style/Montserrat_Bold"
                    android:textSize="14sp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="20dp"
                android:layout_marginLeft="10dp"
                android:paddingLeft="28dp"
                android:paddingTop="0dp"
                android:background="@drawable/vertical_dashed_line">
                <LinearLayout
                    android:id="@+id/llErrorInternet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#f6f7fd"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="16dp"
                    android:paddingBottom="10dp"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/error_no_internet_connection"
                        style="@style/Light_Grey_14"
                        android:textColor="@color/red"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llValidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <pl.droidsonroids.gif.GifImageView
                        android:id="@+id/imgValidate"
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:src="@mipmap/ic_loading"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/validating_license"
                        style="@style/Montserrat_Bold"
                        android:textSize="14sp"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="20dp"
                    android:layout_marginLeft="10dp"
                    android:paddingLeft="28dp"
                    android:paddingTop="0dp"
                    android:background="@drawable/vertical_dashed_line">
                    <LinearLayout
                        android:id="@+id/llValidateMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#f6f7fd"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:paddingTop="10dp"
                        android:paddingLeft="16dp"
                        android:paddingBottom="10dp"
                        tools:visibility="visible">
                        <TextView
                            android:id="@+id/tvValidateMsg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Error here"
                            style="@style/Light_Grey_14"
                            android:textColor="@color/red"
                            android:layout_weight="1"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/imgLogin"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:src="@drawable/ic_radio_button_off"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logging_into_ftp"
                    style="@style/Montserrat_Bold"
                    android:textSize="14sp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="20dp"
                android:layout_marginLeft="10dp"
                android:paddingLeft="28dp"
                android:paddingTop="0dp"
                android:background="@drawable/vertical_dashed_line">
                <LinearLayout
                    android:id="@+id/llLoginMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#f6f7fd"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="16dp"
                    android:paddingBottom="10dp"
                    tools:visibility="visible">
                    <TextView
                        android:id="@+id/tvLoginMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Error here"
                        style="@style/Light_Grey_14"
                        android:textColor="@color/red"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/item_process_comm_v4"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/imgDone"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:src="@drawable/ic_radio_button_off"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/communication_done"
                    style="@style/Montserrat_Bold"
                    android:textSize="14sp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        android:background="@color/white"
        android:layout_below="@+id/header">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:fadeScrollbars="false"
            android:scrollbars="vertical"
            android:scrollbarThumbVertical="@android:color/darker_gray"
            android:scrollbarSize="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="#181d30">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13.3sp"
                    android:textColor="@color/white"
                    style="@style/Montserrat_Bold"
                    android:text="@string/completion_progress"/>
                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textColor="#9fa9ba"
                    style="@style/Montserrat"
                    android:layout_marginTop="5dp"
                    android:visibility="visible"
                    android:text="0 new Files are received"/>
                <TextView
                    android:id="@+id/tvExtMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textColor="#9fa9ba"
                    style="@style/Montserrat"
                    android:visibility="visible"
                    android:text="0 new Files are sent"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@drawable/text_link_selector"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                style="@style/Montserrat_Bold"
                android:text="@string/continue_"
                />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        android:clickable="false"
        android:layout_below="@+id/header">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/black"
                android:padding="16dp"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <!--<com.github.ybq.android.spinkit.SpinKitView
                    style="@style/SpinKitView.Large.ThreeBounce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:SpinKit_Color="@color/white"/>-->

                <pl.droidsonroids.gif.GifImageView
                    android:padding="20dp"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_loading_b"/>

                <TextView
                    android:id="@+id/tvDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    style="@style/White_16"
                    android:textAlignment="center"
                    android:text="@string/update_configuration"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        tools:text="Version 0.0.003"/>
</RelativeLayout>